--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "multer": "1.4.5-lts.1"
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-session": "^1.18.2",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "replicate": "^1.4.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.6",
+    "@types/express-session": "^1.18.2",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.10.2",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.9.3"
   }
 }
